Closed Bug 244282 Opened 22 years ago Closed 22 years ago

Busy cursor displays on IMAP folders while Download/Sync & Offline

Categories

(SeaMonkey :: MailNews: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: karenlhuang, Assigned: Bienvenu)

Details

(Keywords: verified1.7, Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030624 Netscape/7.1 (ax) Build Identifier: Used Mozilla 1.7 build Busy cursor displays on IMAP folders while Download/Sync & Offline Reproducible: Always Steps to Reproduce: 1) Login to an IMAP mail acocunt 2) Select File|Office|Download Sync Now... 3) Checked "Mail messages" & "Worked offline once download and/or sync is complete 4) Select "Select" button from "Download and Sync Messages" dialog 5) Choose few folders -> select OK. 6) Once Offline is occurring, select the other folders which without downloading the message for offline. Actual Results: Actual Result: Busy cursor displays when selecting those folder without downloading message for IMAP offline. Expected Results: Expected result: Busy cursor shouldn't display when selecting those folder without downloading message for IMAP offline.
Please ignore above user-agent info part. I am using Mozilla 1.7 build According to Seth's comment,this bug is logged for partner project bug201: http://partner-projects.mozilla.org/show_bug.cgi?id=201
thx to Neil pointing out a few pertinent details, I can now reproduce this and I have a good idea about what's going on here - we think the folder is running a url (m_urlRunning is TRUE), even though there's no url running...fix upcoming
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attached patch proposed fixSplinter Review
check if the select actually succeeded before setting url running to true.
Attachment #149056 - Flags: superreview?(mscott)
Attachment #149056 - Flags: superreview?(mscott) → superreview+
Here are the simple steps to reproduce this problem: 1. Go offline 2. Select an imap folder 3. Select a different folder 4. Select the first folder at this point, you'll see the stopwatch cursor.
Attachment #149056 - Flags: approval1.7?
Whiteboard: fixed-aviary1.0
Comment on attachment 149056 [details] [diff] [review] proposed fix r/a=sspitzer for 1.7
Attachment #149056 - Flags: review+
Attachment #149056 - Flags: approval1.7?
Attachment #149056 - Flags: approval1.7+
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed1.7
Resolution: --- → FIXED
Verified as fix.
Status: RESOLVED → VERIFIED
Keywords: fixed1.7verified1.7
QA Contact: grylchan → karenlhuang
Pls note: This has been verified on latest 1.7 branch 06-18 build & trunk build 06-15 build.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: