Port Bug #244282 --> Busy cursor displays on IMAP folders while Download/Sync & Offline